# file/doc.go
@@ -14,3 +14,28 @@ type filesResponse struct {
 	// in:body
 	Body []fpb.File
 }
+
+// swagger:response fileResponse
+type fileResponse struct {
+	// in:body
+	Body GetFileByIDResponse
+}
+
+
+
+// swagger:response idResponse
+type idResponse struct {
+	// array of ids
+	ID []string
+}
+
+
+
+// swagger:parameters idParam
+type IDParam struct {
+    // The id of the file
+    // unique:true
+	// in:url
+	// required:true
+    ID string `json:"id"`
+}
