# file/file.go
@@ -234,13 +234,37 @@ func NewRouter(
 func (r *Router) Setup(rg *gin.RouterGroup) {
 	checkExternalAdminScope := r.oAuthMiddleware.ScopeMiddleware(oauth.OutAdminScope)
 
-	// swagger:route GET /files files listFile
-	// Returns a list of files
-	// responses: 
-	// 	200: filesResponse
+	// swagger:route GET /api/files files listFiles
+	//
+	// List of files
+	//
+	// This will return all files according to the requested folder
+	//
+    // Schemes: http
+    // Responses:
+    // 	200: filesResponse
 	rg.GET("/files", checkExternalAdminScope, r.GetFilesByFolder)
+	// swagger:route GET /api/files/{id} files file
+	//
+	// File
+	//
+	// This will return a single file by its id
+	//
+    // Schemes: http
+    // Responses:
+    // 	200: fileResponse
 	rg.GET("/files/:id", checkExternalAdminScope, r.GetFileByID)
 	rg.GET("/files/:id/ancestors", r.GetFileAncestors)
+
+	// swagger:route DELETE /api/files/{id} files idParam
+	//
+	// Delete file 
+	//
+	// This will remove file by its id
+	//
+	// Schemes: http
+	// responses:
+	//	200: idResponse
 	rg.DELETE("/files/:id", r.DeleteFileByID)
 	rg.PUT("/files/:id", r.UpdateFile)
 	rg.PUT("/files", r.UpdateFiles)
